# rusttracker

./: .gitignore  2ndsight.xm  AppRun.template  Cargo.toml  README.md  TODO.md  build.rs  build_debug.txt  build_in_container.sh  check_out.txt  check_output.txt  check_output_2.txt  commit_msg.txt  debug_log.txt  digital_beat_-_egroove.xm  download_and_upload.sh  electric_church_hit.mod  electric_drug.mod  fix_struct.py  gary_h_-_my_name_is_the_law.xm  installer.iss  ive_got_the_power.mod  release_script.sh  repackage_appimage.sh  rewrite_bitstream.py  rusttracker.desktop  scratch.py  scratch.rs  second_reality.it  test.rs  test_fft.rs  test_plan.md  uc-wof.xm  update_script.sh  wait_for_user.txt
.github/workflows/: bitstream-tester.yml  linux-build.yml  macos.yml  windows-build.yml
assets/: neon_room.blend
scratch_bitstream/: Cargo.toml
scratch_bitstream/src/: main.rs
scratch_bitstream_windows/: Cargo.toml
scratch_bitstream_windows/src/: main.rs
src/: audio.rs  bitstream.rs  engine.rs  main.rs  state.rs  test.rs  test_egui.rs  test_wgpu.rs  ui.rs
src/shaders/: _common.wgsl  _glyph_font.wgsl  crt_oscilloscope.wgsl  ferrofluidsim_compute.wgsl  fire_compute.wgsl  firesim_compute.wgsl  gpu_fft.wgsl  heatmap_compute.wgsl  hud.wgsl  resynth_compute.wgsl  spectrum.wgsl  vis_3doscilloscope.wgsl  vis_3doscilloscope_freq.wgsl  vis_ferrofluid.wgsl  vis_ferrofluidsim.wgsl  vis_firesim.wgsl  vis_flame.wgsl  vis_lissajous.wgsl  vis_neon.wgsl  vis_oscilloscope.wgsl  vis_rain.wgsl  vis_solar.wgsl  vis_spatial.wgsl  vis_spectrum.wgsl  vis_starfield.wgsl  vis_synthwave.wgsl  vis_video.wgsl
tests/: test_audio_rs.rs  test_ffmpeg.rs  test_symphonia.rs
