[package]
name = "rusttracker"
version = "0.2.7"
edition = "2024"
default-run = "rusttracker"
description = "High-Performance Vulkan Tracker Module Visualizer"
license = "MIT"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rusttracker", dest = "/usr/bin/rusttracker", mode = "755" },
    { source = "rusttracker.desktop", dest = "/usr/share/applications/rusttracker.desktop", mode = "644" },
    { source = "icon.png", dest = "/usr/share/icons/hicolor/256x256/apps/rusttracker.png", mode = "644" }
]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
cpal = "0.17.1"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
openmpt = "0.3.1"
ratatui = "0.30.0"
spectrum-analyzer = "1.7.0"
symphonia = { version = "0.5.4", features = ["all"] }
wgpu = "24.0.0"
winit = "0.30.5"
bytemuck = { version = "1.21.0", features = ["derive"] }
pollster = "0.4.0"
egui = "0.31.0"
egui-wgpu = "0.31.0"
egui-winit = "0.31.0"
rfd = "0.17.2"
image = "0.25.1"

[build-dependencies]
winres = "0.1.12"
