[package]
name = "rusttracker"
version = "0.8.7"
edition = "2024"
default-run = "rusttracker"
description = "High-Performance Vulkan Tracker Module Visualizer"
license = "MIT"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rusttracker", dest = "/usr/bin/rusttracker", mode = "755" },
    { source = "rusttracker.desktop", dest = "/usr/share/applications/rusttracker.desktop", mode = "644" },
    { source = "icon.png", dest = "/usr/share/icons/hicolor/256x256/apps/rusttracker.png", mode = "644" }
]

[package.metadata.deb]
assets = [
    ["target/release/rusttracker", "usr/bin/", "755"],
    ["rusttracker.desktop", "usr/share/applications/", "644"],
    ["icon.png", "usr/share/icons/hicolor/256x256/apps/rusttracker.png", "644"]
]
extended-description = "A high-performance, real-time audio visualizer and tracker module player."

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.17.3"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
openmpt = "0.3.1"
ratatui = "0.30.0"
symphonia = { version = "0.5.5", features = ["all"] }
wgpu = "29.0.3"
winit = "0.30.13"
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = "0.4.0"
egui = "0.34.2"
egui-wgpu = "0.34.2"
egui-winit = "0.34.2"
rfd = "0.17.2"
image = "0.25.10"
ffmpeg-next = "8.1.0"
rustfft = "6.4.1"
ringbuf = "0.5.0"
gilrs = "0.11.0"

[build-dependencies]
winres = "0.1.12"
