[package]
name = "scratch_bitstream_windows"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Media_KernelStreaming",
    "Win32_System_Threading",
    "Win32_Security",
] }
