[package]
name = "scratch_bitstream_windows"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ffmpeg-next = "8.1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_Media_KernelStreaming",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
] }
